correçao de bugs

--- a/Frontend/PaginaFrontal/html/TC.html
+++ b/Frontend/PaginaFrontal/html/TC.html
@@ -120,7 +120,7 @@
   <div class="header-left">
     <div class="logo-container">
       <a href="HomePage.html" class="logo-link">
-        <img src="/Frontend/lib/images/Logo.svg" alt="XYZ Labs Logo" class="logo">
+        <img src="/lib/images/Logo.svg" alt="XYZ Labs Logo" class="logo">
       </a>
     </div>
 
