--- a/Frontend/PaginaFrontal/html/about.html
+++ b/Frontend/PaginaFrontal/html/about.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sobre Nós - XYZ Labs</title>
-   <link rel="stylesheet" href="../css/base.css">
-   <link rel="stylesheet" href="../css/Header.css">
-   <link rel="stylesheet" href="../css/about.css">
+   <link rel="stylesheet" href="/PaginaFrontal/css/base.css">
+   <link rel="stylesheet" href="/PaginaFrontal/css/Header.css">
+   <link rel="stylesheet" href="/PaginaFrontal/css/about.css">
 </head>
 <body>
 
@@ -15,7 +15,7 @@
   <div class="header-left">
     <div class="logo-container">
       <a href="HomePage.html" class="logo-link">
-        <img src="/Frontend/lib/images/Logo.svg" alt="XYZ Labs Logo" class="logo">
+        <img src="/lib/images/Logo.svg" alt="XYZ Labs Logo" class="logo">
       </a>
     </div>
 
@@ -43,7 +43,7 @@
     <!-- Search Bar -->
   <div class="header-search">
   <span class="search-icon" id="searchBtn">
-    <img src="/Frontend/lib/icons/search-svgrepo-com.svg" alt="pesquisar">
+    <img src="/lib/icons/search-svgrepo-com.svg" alt="pesquisar">
   </span>
   <input
     type="text"
@@ -63,7 +63,7 @@
     <!-- Ícones quando logado -->
     <div id="userIcons" style="display:none; position: relative;">
   <button id="userMenuBtn" class="icon-btn" aria-label="Menu utilizador">
-    <img src="/Frontend/lib/icons/user-alt-1-svgrepo-com.svg" alt="Utilizador">
+    <img src="/lib/icons/user-alt-1-svgrepo-com.svg" alt="Utilizador">
   </button>
 
   <!-- 🔽 DROPDOWN USER -->
@@ -73,7 +73,7 @@
   </div>
 
   <button id="cartBtn" class="icon-btn cart-btn" aria-label="Carrinho">
-    <img src="/Frontend/lib/icons/cart-shopping-fast-svgrepo-com.svg" alt="Carrinho">
+    <img src="/lib/icons/cart-shopping-fast-svgrepo-com.svg" alt="Carrinho">
     <span class="cart-badge" id="cartBadge">0</span>
   </button>
 </div>
@@ -115,7 +115,7 @@
           <p>Hoje, combinamos tecnologia de ponta com artesanato digital para criar produtos únicos que transformam ideias em realidade. Desde protótipos funcionais a peças decorativas personalizadas, a nossa missão é dar vida aos seus projetos com qualidade premium.</p>
         </div>
         <div class="about-image">
-          <img src="/Frontend/images/about-story.jpg" alt="Nossa História">
+          <img src="/images/about-story.jpg" alt="Nossa História">
         </div>
       </div>
     </section>
@@ -147,7 +147,7 @@
     <section class="about-section">
       <div class="about-content reverse">
         <div class="about-image">
-          <img src="/Frontend/images/about-tech.jpg" alt="Tecnologia">
+          <img src="/images/about-tech.jpg" alt="Tecnologia">
         </div>
         <div class="about-text">
           <h2>🔬 Tecnologia de Ponta</h2>
@@ -168,7 +168,7 @@
       <div class="team-grid">
         <div class="team-member">
           <div class="member-photo">
-            <img src="/Frontend/images/team-1.jpg" alt="Fundador">
+            <img src="/images/team-1.jpg" alt="Fundador">
           </div>
           <h3>Ricardo Santos</h3>
           <p class="member-role">Fundador & CEO</p>
@@ -177,7 +177,7 @@
 
         <div class="team-member">
           <div class="member-photo">
-            <img src="/Frontend/images/team-2.jpg" alt="CTO">
+            <img src="/images/team-2.jpg" alt="CTO">
           </div>
           <h3>Sofia Mendonça</h3>
           <p class="member-role">CTO</p>
@@ -289,7 +289,7 @@
 
       <div class="footer-section">
         <h4>Contacto</h4>
-        <p>📧 info@xyzlabs.pt</p>
+        <p>📧 <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="c3aaada5ac83bbbab9afa2a1b0edb3b7">[email&#160;protected]</a></p>
         <p>📞 +351 935310984</p>
       </div>
     </div>
@@ -299,9 +299,4 @@
     </div>
   </div>
 </footer>
-<script src="../scripts/header.js"></script>
-
-<script src="../scripts/cart.js"></script>
-<script src="../scripts/homepage-products.js"></script>
-</body>
-</html>
+<script data-cfasync="false" src="/cdn-cgi/scri
