--- a/Frontend/PaginaFrontal/html/colors.html
+++ b/Frontend/PaginaFrontal/html/colors.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cores - XYZ Labs</title>
-   <link rel="stylesheet" href="../css/base.css">
-   <link rel="stylesheet" href="../css/Header.css">
-   <link rel="stylesheet" href="../css/colors.css">
+  <link rel="stylesheet" href="/PaginaFrontal/css/base.css">
+   <link rel="stylesheet" href="/PaginaFrontal/css/Header.css">
+   <link rel="stylesheet" href="/PaginaFrontal/css/colors.css">
 </head>
 <body>
 
@@ -15,7 +15,7 @@
   <div class="header-left">
     <div class="logo-container">
       <a href="HomePage.html" class="logo-link">
-        <img src="/Frontend/lib/images/Logo.svg" alt="XYZ Labs Logo" class="logo">
+        <img src="/lib/images/Logo.svg" alt="XYZ Labs Logo" class="logo">
       </a>
     </div>
 
