correçao de apis

--- a/Frontend/PaginaFrontal/html/materials.html
+++ b/Frontend/PaginaFrontal/html/materials.html
@@ -29,9 +29,9 @@
     <!-- Navegação -->
     <nav class="header-nav" id="headerNav">
       <ul>
-        <li><a href="HomePage.html" >Home</a></li>
+        <li><a href="HomePage.html" class="active">Home</a></li>
         <li><a href="products.html">Produtos</a></li>
-        <li><a href="materials.html" class="active">Materiais</a></li>
+        <li><a href="materials.html">Materiais</a></li>
         <li><a href="colors.html">Cores</a></li>
         <li><a href="about.html">Sobre</a></li>
         <li><a href="contact.html">Contacto</a></li>
@@ -43,7 +43,7 @@
     <!-- Search Bar -->
   <div class="header-search">
   <span class="search-icon" id="searchBtn">
-    <img src="/Frontend/lib/icons/search-svgrepo-com.svg" alt="pesquisar">
+    <img src="/lib/icons/search-svgrepo-com.svg" alt="pesquisar">
   </span>
   <input
     type="text"
@@ -63,7 +63,7 @@
     <!-- Ícones quando logado -->
     <div id="userIcons" style="display:none; position: relative;">
   <button id="userMenuBtn" class="icon-btn" aria-label="Menu utilizador">
-    <img src="/Frontend/lib/icons/user-alt-1-svgrepo-com.svg" alt="Utilizador">
+    <img src="/lib/icons/user-alt-1-svgrepo-com.svg" alt="Utilizador">
   </button>
 
   <!-- 🔽 DROPDOWN USER -->
@@ -73,7 +73,7 @@
   </div>
 
   <button id="cartBtn" class="icon-btn cart-btn" aria-label="Carrinho">
-    <img src="/Frontend/lib/icons/cart-shopping-fast-svgrepo-com.svg" alt="Carrinho">
+    <img src="/lib/icons/cart-shopping-fast-svgrepo-com.svg" alt="Carrinho">
     <span class="cart-badge" id="cartBadge">0</span>
   </button>
 </div>
