--- a/Frontend/userpages/html/forgotPassword.html
+++ b/Frontend/userpages/html/forgotPassword.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recuperar Password - XYZ Labs</title>
-  <link rel="stylesheet" href="../css/Forgotpassword.css">
+  <link rel="stylesheet" href="/userpages/css/Forgotpassword.css">
 </head>
 <body>
 
@@ -13,7 +13,7 @@
 
     <div class="register-header">
       <div class="logo">
-        <img src="Emblem.svg" alt="XYZ Labs Logo" class="register-logo">
+        <img src="/userpages/html/Emblem.svg" alt="XYZ Labs Logo" class="register-logo">
       </div>
       <h2>Recuperar Password</h2>
       <p>Insere o teu email para receber instruções</p>
@@ -53,8 +53,7 @@
 </div>
 
 
-<script src="../scripts/Forgotpassword.js"></script>
+<script src="/userpages/scripts/Forgotpassword.js"></script>
 
 </body>
 </html>
-
