--- a/Frontend/userpages/html/register.html
+++ b/Frontend/userpages/html/register.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Criar Conta</title>
-  <link rel="stylesheet" href="../css/register.css">
+  <link rel="stylesheet" href="/userpages/css/register.css">
 </head>
 <body>
 
@@ -13,7 +13,7 @@
 
     <div class="register-header">
       <div class="logo">
-        <img src="Emblem.svg" alt="XYZ Labs Logo" class="register-logo">
+        <img src="/userpages/html/Emblem.svg" alt="XYZ Labs Logo" class="register-logo">
       </div>
       <h2>Sign Up</h2>
       <p>User Registration</p>
@@ -90,6 +90,6 @@
 </div>
 
 
-<script src="../scripts/register.js"></script>
+<script src="/userpages/scripts/register.js"></script>
 </body>
 </html>
