--- a/Frontend/Dashboard/html/dashboard.html
+++ b/Frontend/Dashboard/html/dashboard.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard - XYZ Labs</title>
-  <link rel="stylesheet" href="../css/dashboard-brutalist.css">
-  <link rel="stylesheet" href="../css/products-modals.css">
+  <link rel="stylesheet" href="/Dashboard/css/dashboard-brutalist.css">
+  <link rel="stylesheet" href="/Dashboard/css/products-modals.css">
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 </head>
 <body>
@@ -1346,17 +1346,17 @@
   </div>
 
   <!-- Scripts -->
-  <script src="../scripts/security.js"></script>
-  <script src="../scripts/dashboard-stats.js"></script>
-  <script src="../scripts/dashboard.js"></script>
-  <script src="../scripts/users.js"></script>
-  <script src="../scripts/products.js"></script>
-  <script src="../scripts/categories.js"></script>
-  <script src="../scripts/createproduct.js"></script>
-  <script src="../scripts/editproduct.js"></script>
-  <script src="../scripts/viewproduct.js"></script>
-  <script src="../scripts/image-order-manager.js"></script>
-  <script src="../scripts/price-calculator.js"></script>
-  <script src="../scripts/orders.js"></script>
+  <script src="/Dashboard/scripts/security.js"></script>
+  <script src="/Dashboard/scripts/dashboard-stats.js"></script>
+  <script src="/Dashboard/scripts/dashboard.js"></script>
+  <script src="/Dashboard/scripts/users.js"></script>
+  <script src="/Dashboard/scripts/products.js"></script>
+  <script src="/Dashboard/scripts/categories.js"></script>
+  <script src="/Dashboard/scripts/createproduct.js"></script>
+  <script src="/Dashboard/scripts/editproduct.js"></script>
+  <script src="/Dashboard/scripts/viewproduct.js"></script>
+  <script src="/Dashboard/scripts/image-order-manager.js"></script>
+  <script src="/Dashboard/scripts/price-calculator.js"></script>
+  <script src="/Dashboard/scripts/orders.js"></script>
 </body>
 </html>
