--- a/Frontend/userpages/html/profile.html
+++ b/Frontend/userpages/html/profile.html
@@ -640,6 +640,6 @@
   </div>
 </div>
 
-<script src="../scripts/profile.js"></script>
+<script src="/userpages/scripts/profile.js"></script>
 </body>
 </html>
