--- a/Frontend/userpages/html/reset-password.html
+++ b/Frontend/userpages/html/reset-password.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Redefinir Password</title>
-  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="/userpages/css/reset.css">
 </head>
 <body>
 <div class="register-container">
   <div class="register-card">
     <div class="register-header">
       <div class="logo">
-        <img src="Emblem.svg" alt="XYZ Labs Logo" class="register-logo">
+        <img src="/userpages/html/Emblem.svg" alt="XYZ Labs Logo" class="register-logo">
       </div>
       <h2>Redefinir Password</h2>
       <p>Introduz a nova password</p>
@@ -55,6 +55,6 @@
   </div>
 </div>
 
-<script src="../scripts/reset-password.js"></script>
+<script src="/userpages/scripts/reset-password.js"></script>
 </body>
 </html>
